# mlflow-docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yaml
