[tool.poetry]
name = "mlflow-docker"
version = "0.1.0"
description = ""
authors = ["なるみ <weaper@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
mlflow = "^1.26.1"
boto3 = "^1.24.17"
PyMySQL = "^1.0.2"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
